<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.view.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/qmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/quantity_measurement"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="convertQuantity"
        android:text="@string/convert_quantity"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qmTextView"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="addQuantity"
        android:text="@string/add_quantities"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/convertButton" />

    <FrameLayout
        android:id="@+id/fragmentHolder"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/addButton"
        app:layout_constraintStart_toStartOf="@id/convertButton"
        app:layout_constraintTop_toBottomOf="@id/convertButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>